changes made in alerts.

--- a/src/app/dashboard/alerts-popup/alerts-popup.component.html
+++ b/src/app/dashboard/alerts-popup/alerts-popup.component.html
@@ -24,7 +24,7 @@
 
           <div class="icon">
           <img src="assets/img/default-icon.svg"></div>
-          <div class="txt"><a [routerLink]="['/dashboard/home']" data-dismiss="modal" (click)="closeButtonClicked()"><span (click)="pageReload()">Default Lease<span class="cntnum">({{defaultLeaseCount}})</span> </span></a>
+          <div class="txt"><a [routerLink]="['/dashboard/home']" data-dismiss="modal" (click)="closeButtonClicked()"><span (click)="changeRoute()">Default Lease<span class="cntnum">({{defaultLeaseCount}})</span> </span></a>
           </div>
 
 
