Default lease issue fixed

--- a/src/app/dashboard/home/lease-block/lease-block.component.html
+++ b/src/app/dashboard/home/lease-block/lease-block.component.html
@@ -6,11 +6,10 @@
 
 <div class="ca-box-wrap">
 
-
-  <div class="  "
+  <div class=""
        *ngFor="let item of leaseArray; let i=index;"
        [ngClass]="{'leaseCardSelected':selectedLease==i}"
-       (click)="selectedLease=i;emitSelectedLeaseObj(item)"
+       (click)="selectedLease=i;emitSelectedLeaseObj(item)" id="leaseCard{{ i }}"
   >
     <div class="" [ngClass]="{'leaseCardSelected':selectedLease==i}">
       <span class="" *ngIf="item['cardAlert']">{{item['cardAlert']}}</span>
@@ -24,4 +23,5 @@
     </div>
   </div>
 </div>
+<button (click)='autoTrigger()'>aUTO tRIGGER</button>
 
