new changes made.

--- a/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
+++ b/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
@@ -29,7 +29,7 @@
                     #tempPass="ngModel"
                     #tmpPass
                     
-                    (keyup)="onInputBlur($event);"
+                    (blur)="onInputBlur($event);"
                   >
 
                     <div class="fd-error" (click)="hideTempPasswordError()"
@@ -48,7 +48,7 @@
                     maxlength="25"
                     minlength="8"
                     #pass
-                    (blur)="onInputBlur($event.target.value);"
+                    (blur)="onblurevent($event);"
                     (input)="onInputBlur($event);" (focus)="validate($event)"
                     [formControl]="passwordFC"
                   >
