--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -7,5 +7,7 @@
     <app-land-cnt-01></app-land-cnt-01>
 
     <app-land-cnt-02></app-land-cnt-02>
+
+    <app-push-notification></app-push-notification>
   </div>
 </div>
