--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -42,18 +42,16 @@
 <div class="row land-footer ">
   <div class="col   ">
     <!--<img class="img-fluid" src="./assets/img/bg-footer.png">-->
-    <!-- <div class="row"> -->
     <div class="cookies-wrap land-wrap ">
       <p> 2018-2019 First Data Corporation. All Rights Reserved.&nbsp;
-        <a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy.</a>
+        <a href="https://www.firstdata.com/en_us/privacy.html"
+          target="blank">Privacy.</a>
       </p>
       <p>This site uses cookies. By continuing to browse the site you are agreeing to our
         <a target="target" [routerLink]="['/cookiesdisclosure']">Cookies.
         </a>
       </p>
     </div>
-    <!-- </div> -->
   </div>
-
 
 </div>
