--- a/src/app/dashboard/epp/epp-popup/epp-popup.component.html
+++ b/src/app/dashboard/epp/epp-popup/epp-popup.component.html
@@ -43,7 +43,7 @@
   </div>
 
 
-  <div class="modal fade show" id="myModal1" style="padding-right: 17px; display: block;" *ngIf="noButtonPopup1">
+  <div class="modal fade show" id="myModal1" *ngIf="noButtonPopup1">
     <div class="modal-dialog">
       <div class="modal-content">
 
