--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -40,8 +40,9 @@
               </div>
               <div class="details-inner">
                 <label>Total Monthly EPP:</label>
-                <span class="" [ngClass]="{'activeBg':changePriceColor}">${{totalAmt}}.00</span>
+                <span class="activeBg">${{totalAmt}}.00</span>
               </div>
+
             </div>
 
 
@@ -76,6 +77,7 @@
 
 
             <!--Epp Lease toggles Starts-->
+
             <div class="row">
               <div class="toggleWrap" *ngIf="leaseData">
                 <div class="pn-wrap">
@@ -220,7 +222,7 @@
             <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
               <input type="checkbox" [checked]="agreeModel" [disabled]="checkbox.agree" name="option1" id="checkbox3" value="agree" class="check3"
                 (change)="onYesNoClicked($event)" />
-              <label for="checkbox3" class="label3"> I agree to the First Data Terms of Service and Privacy Policy
+              <label for="checkbox3" class="label3"> I agree to the First Data Terms of Service and <a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy</a>
               </label>
 
             </div>
