--- a/src/app/thank/thank.component.html
+++ b/src/app/thank/thank.component.html
@@ -1,30 +1,22 @@
 <div id="signWrap" class="container-fluid ">
-  <div class="row">
-    <div class="col-sm-12 success-wrap th-outer-wrap  ">
-      <h1 id="brandLogo" class="text-center">
-        <img src="/assets/img/firstdata_logo.svg">
-      </h1>
-      <h1 class="text-center th-logowrap">
-        <img src="/assets/img/TickIcon.svg">
-      </h1>
-      <!--<h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>-->
+    <div class="row">
+      <div class="col-sm-12 success-wrap th-outer-wrap  ">
+        <h1 id="brandLogo" class="text-center"><img src="/assets/img/firstdata_logo.svg"></h1>
+        <h1 class="text-center th-logowrap"><img src="/assets/img/TickIcon.svg"></h1>
+        <!--<h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>-->
 
-      <h1 class="text-center th-head ">Thank you</h1>
-      <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
-      <div class="cookies-wrap thanks">
-        <p> 2018-2019 First Data Corporation. All Rights Reserved.&nbsp;
-          <a href="https://www.firstdata.com/en_us/privacy.html"
-            target="blank">Privacy.</a>
-        </p>
-        <p>This site uses cookies. By continuing to browse the site you are agreeing to our
-          <a target="target" [routerLink]="['/cookiesdisclosure']">Cookies.</a>
-        </p>
+        <h1 class="text-center th-head ">Thank you</h1>
+        <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
+        <div class="cookies-wrap thanks">
+          <p> 2018-2019 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy.</a></p>
+           <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target" [routerLink]="['/cookiesdisclosure']">Cookies.</a></p>
+        </div>
+
+        <button type="submit" (click)="temp()"
+                class="btnSubmit btn btn-primary btn-lg btn-block thankwrap">Done
+        </button>
+
       </div>
 
-      <button type="submit" (click)="temp()" class="btnSubmit btn btn-primary btn-lg btn-block thankwrap">Done
-      </button>
-
     </div>
-
   </div>
-</div>
